Fixing publications layout so that it works properly on mobile and IE. IE 10+ doesn't support comment reading to add special classes.  Code was commented out improperly, and mobile devices were picking up IE styling.

--- a/ourinternet/static/css/styles.css
+++ b/ourinternet/static/css/styles.css
@@ -541,6 +541,8 @@
           width: 100%;
           padding-right: 0; } }
       .publication .publication-content .cover-image img {
+        left: auto !important;
+        top: auto !important;
         top: initial !important;
         left: initial !important;
         z-index: 10 !important;
@@ -552,9 +554,6 @@
         @media only screen and (max-width: 30em) {
           .publication .publication-content .cover-image img {
             left: 10% !important; } }
-        .lt-ie11 .publication .publication-content .cover-image img {
-          left: auto !important;
-          top: auto !important; }
   .publication .download {
     margin-top: 2em;
     text-align: center; }
